--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,36 @@
 alembic==0.8.9
+appdirs==1.4.0
+beautifulsoup4==4.5.3
+bs4==0.0.1
+cffi==1.11.2
 click==6.7
+cryptography==1.7.2
+enum34==1.1.6
+epub==0.5.2
 Flask==0.12
 Flask-Migrate==2.0.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 gunicorn==19.6.0
+humanfriendly==2.3.2
+idna==2.6
+ipaddress==1.0.18
 itsdangerous==0.24
 Jinja2==2.9.4
+jwt==0.5.2
+lxml==4.0.0
 Mako==1.0.6
 MarkupSafe==0.23
-python-editor==1.0.3
-SQLAlchemy==1.1.4
-Werkzeug==0.11.15
-appdirs==1.4.0
-beautifulsoup4==4.5.3
-bs4==0.0.1
-humanfriendly==2.3.2
 monotonic==1.2
 packaging==16.8
-pyparsing==2.1.10
-six==1.10.0
 psycopg2==2.4.5
+pyasn1==0.3.7
+pycparser==2.18
+pycrypto==2.6.1
+pyparsing==2.1.10
 PyPDF2==1.26.0
-epub==0.5.2
+python-editor==1.0.3
+six==1.10.0
+SQLAlchemy==1.1.4
+typing==3.5.3.0
+Werkzeug==0.11.15
